style.css
@font-face {
  font-family: 'Fira Code Web';
  src: url(font/FiraCode-Regular.woff2);
}

body {
  background-color: #0f1117;
  color: #c6c8d1;
  font-family: "Segoe UI", "Helvetica Neue", Arial, sans-serif;
  font-size: medium;
  margin: 0px;
}

div, .top {
  background-color: #161821;
}

a {
  color: #84a0c6;
  background-color: transparent;
  text-decoration: none;
}

h2 {
  color: #e2a478;
}

h3 {
  color: #a093c7;
}

main {
  margin: 0px 10%;
}

code {
  font-family: 'Fira Code Web';
}

footer {
  font-size: small;
  text-align: center;
  height: 50px;
  margin-top: 20px;
}

img {
  max-width: 600px;
  width: 120px;
  height: auto;
}

.content {
  font-size: x-large;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  padding: 1em;
  border-radius: 10px;
  text-align: center;
}

.project {
  border-radius: 10px;
  padding: 2px 1%;
  margin: 1%;
}

.top {
  padding: 1em;
  text-align: center;
}

.row {
  display: flex;
}

.column {
  padding: 5px;
  text-align: center;
}

@media screen and (max-width: 500px) {
  main {
    margin: 0px 2%;
  }

  .row {
    overflow: scroll;
  }

  .column {
    width: 100%;
  }
}

